--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.9.2",
     "@types/pg": "^8.15.6",
+    "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.6",
+    "pino-pretty": "^13.1.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^4.0.4"
