--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^24.9.2",
     "@types/pg": "^8.15.6",
     "@types/ws": "^8.18.1",
+    "@vitest/coverage-v8": "^4.0.4",
     "drizzle-kit": "^0.31.6",
     "pino-pretty": "^13.1.2",
     "tsx": "^4.20.6",
